# django-response-view-mixin

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tasks.py  testing.yml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: actions.yml  testing.yml
django_response_mixin_view/: apps.py  response_mixins.py  urls.py
django_response_view_mixin.egg-info/: PKG-INFO
docs/: conf.py  index.rst  installation.rst  usage.rst
response_view_mixin/: apps.py  view_mixins.py
response_view_mixin/utils/: image_serve.py
tests/: README.md  settings.py  test_models.py  urls.py
tests/example/: models.py  tests.py  urls.py  views.py
tests/example/migrations/: 0001_initial.py
