[coverage:run]
branch = True
omit =
    .tox/*
    .venv/*
    */asgi.py
    */migrations/*
    */tests/*
    */wsgi.py
    manage.py
    tasks.py
    dashboard.py
    */settings.py
    */management/commands/*
    */factories.py
    */customer_care/*
    */urls.py
    profiles/*
    */migration_utils.py
    */settings_mixins.py
    */settings_utils.py
    */base_settings.py
    */model_mixins.py
    */context_processors.py
    */post_office_admin.py
    */model_admin_mixin.py
    */test_utils.py
    */docs_utils.py
    *admin.py
    */__init__.py
source = .

[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .
    est_cache,
    .tox,
    .venv,
    .vscode,
    ./node_modules/*,
    */migrations/*,
    */south_migrations/*,
    */tests/*,
    ./src/*,
    project/settings/*,
ignore =
    E501,
    T499,
    W503,
    D104,
    D105,
    D101,
    D100,
    E203,
    E501,
    W503,
    F401,
    D103,
    F403,
    D102,
    B950,
    B008,
    D106,
    D401,
    D403,
    D400,
    D205,
    D200,
    D208,
    D210,
    T484,
    I005,
    D107,
    T400,
max-line-length = 120
mypy_config = pyproject.toml
no_implicit_optional=False
select = B,C,D,E,F,I,W,T4,B9

[isort]
profile = black
line_length = 88
known_third_party = django  # Include any other third-party packages as needed
default_section = THIRDPARTY
skip_gitignore = true
skip = .venv,.tox,build,dist

[mypy]
cache_dir = .mypy_cache
ignore_missing_imports = True

[metadata]
license-file = LICENSE.md
